--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openzwave-shared",
   "version": "0.0.2",
-  "description": "Provide Node.JS bindings for the OpenZWave library in order to control a Z-Wave network",
+  "description": "Provide Node.JS bindings for the shared OpenZWave library in order to control a Z-Wave network",
   "main": "./lib/openzwave.js",
   "scripts": {
     "test": "node test.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ekarak/node-openzwave-shared.git"
+    "url": "git://github.com/OpenZWave/node-openzwave-shared.git"
   },
   "keywords": [
     "zwave",
