--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openzwave-shared",
-  "version": "0.1.0",
-  "description": "Provide Node.JS bindings for the shared OpenZWave library in order to control a Z-Wave network",
+  "version": "0.1.1",
+  "description": "Node.JS bindings for OpenZWave including the long-missing management functions",
   "main": "./lib/openzwave-shared.js",
   "scripts": {
     "test": "node test.js",
