--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.1",
   "description": "Node.JS bindings for OpenZWave including the long-missing management functions",
   "main": "./lib/openzwave-shared.js",
+  "dependencies" : {
+     "nan" : ">=0.3.1"
+  },
   "scripts": {
     "test": "node test.js",
     "install": "node-gyp rebuild"
