--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.JS bindings for OpenZWave including the long-missing management functions",
   "main": "./lib/openzwave-shared.js",
   "dependencies" : {
-     "nan" : ">=0.3.1"
+     "nan" : "~1.9.0"
   },
   "scripts": {
     "test": "node test.js",
