--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openzwave-shared",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Node.JS bindings for OpenZWave including management and security functions",
   "main": "./lib/openzwave-shared.js",
   "dependencies" : {
@@ -25,15 +25,9 @@
 	"Thibaut CONSTANT",
 	"davide-lr"
   ],
-  "licenses": [
-    {
+  "license": {
       "type": "ISC",
       "url": "http://opensource.org/licenses/ISC"
-    },
-    {
-      "type": "LGPLv3",
-      "url": "http://www.gnu.org/licenses/lgpl-3.0.html"
-    }
-  ],
+  },
   "gypfile": true
 }
