Move windows ozw install script to npm scripts, update readme

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "node test.js",
+    "preinstall": "node lib/install-ozw.js",
     "install": "node-gyp rebuild"
   },
   "repository": {
