--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "Justin Hammond",
     "Jonathan Perkin (http://www.perkin.org.uk/)",
     "Luke Hertert (http://werul.com)",
-    "Thibaut CONSTANT",
+    "Thibaut CONSTANT"
   ],
   "license": {
     "type": "ISC",
