avoid crash when deleting uninitialised array if node has no association groups

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "Jan Erik Hanssen",
     "Brennan Kinney",
     "Adam Rensel",
-    "David Moxey"
+    "David Moxey",
+    "Bart Bakker"
   ],
   "license": {
     "type": "ISC",
