--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ addons:
     packages:
       - build-essentials
 
+before_install:
+  - wget http://mirror.my-ho.st/Downloads/OpenZWave/Debian_8.0/amd64/libopenzwave1.3-dev_1.4.164_amd64.deb
+  - wget http://mirror.my-ho.st/Downloads/OpenZWave/Debian_8.0/amd64/libopenzwave1.3_1.4.164_amd64.deb
+  - sudo dpkg -i libopenzwave*
+
 env:
   global:
     - CC=/usr/bin/gcc
