--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ addons:
       - build-essential
 
 before_install:
-  - wget http://mirror.my-ho.st/Downloads/OpenZWave/Debian_8.0/amd64/libopenzwave1.3-dev_1.4.164_amd64.deb
-  - wget http://mirror.my-ho.st/Downloads/OpenZWave/Debian_8.0/amd64/libopenzwave1.3_1.4.164_amd64.deb
-  - sudo dpkg -i libopenzwave*
+  - wget https://github.com/OpenZWave/open-zwave/archive/master.zip
+  - unzip master.zip
+  - cd open-zwave-master
+  - sudo make install
 
 env:
   global:
