--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openzwave-shared",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "description": "Node.JS bindings for OpenZWave including management and security functions",
   "main": "./lib/openzwave-shared.js",
   "dependencies": {
@@ -38,7 +38,10 @@
     "Adam Rensel",
     "David Moxey",
     "Bart Bakker",
-    "vectah0"
+    "vectah0",
+    "yybd",
+    "Rob Huehn",
+    "Michael Franken"
   ],
   "license": {
     "type": "ISC",
