add Matt to contributors

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "vectah0",
     "yybd",
     "Rob Huehn",
-    "Michael Franken"
+    "Michael Franken",
+    "Matt Eastman"
   ],
   "license": {
     "type": "ISC",
