--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openzwave-shared",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "description": "Node.JS bindings for OpenZWave including management and security functions",
   "main": "./lib/openzwave-shared.js",
   "dependencies": {
@@ -47,7 +47,8 @@
     "Casey Foster",
     "vibr77",
     "blackshadev (https://github.com/blackshadev)",
-    "Daniel Lando (https://github.com/robertsLando)"
+    "Daniel Lando (https://github.com/robertsLando)",
+    "Jorge Schrauwen (https://blackdot.be)"
   ],
   "license": {
     "type": "ISC",
