--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - gcc-4.9
-      - g++-4.9
+      - clang
+      - clang++
       - libudev-dev
 
 before_install:
@@ -22,17 +22,14 @@ before_install:
 
 env:
   global:
-    - CC=/usr/bin/gcc-4.9
-    - CXX=/usr/bin/g++-4.9
+    - CC=/usr/bin/clang
+    - CXX=/usr/bin/clang++
 
 node_js:
   - "0.12"
   - "4"
-  - "5"
   - "6"
-  - "7"
   - "8"
-  - "9"
   - "10"
   - "11"
   - "12"
