--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 
+os:
+    - linux
+    - windows
+    
 sudo: required
 
 addons:
@@ -10,19 +14,29 @@ addons:
       - libudev-dev
 
 before_install:
-  - wget https://github.com/OpenZWave/open-zwave/archive/master.zip
-  - unzip master.zip
-  - cd open-zwave-master
-  - sudo make install
-  - sudo ldconfig /usr/local/lib /usr/local/lib64
-  - npm install -g node-gyp
-  - cd ..
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]
+    then 
+        wget https://github.com/OpenZWave/open-zwave/archive/master.zip
+        unzip master.zip
+        cd open-zwave-master
+        sudo make install
+        sudo ldconfig /usr/local/lib /usr/local/lib64
+        npm install -g node-gyp
+        cd ..
+    fi
 
 node_js:
-  - "0.12"
-  - "4"
-  - "6"
   - "8"
   - "10"
   - "11"
   - "12"
+  
+matrix:
+  include:
+    - os: linux
+      node_js: "0.12"
+    - os: linux
+      node_js: "4"
+    - os: linux
+      node_js: "6"
