--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,6 +1,6 @@
 name: Linux Builds
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -18,7 +18,13 @@ jobs:
     - name: Install libudev-dev
       run: sudo apt install libudev-dev
     - name: Build open-zwave-latest
-      run: wget https://github.com/OpenZWave/open-zwave/archive/master.zip && unzip master.zip && cd open-zwave-master && sudo make install && sudo ldconfig /usr/local/lib /usr/local/lib64 && cd ..
+      run: |
+        wget https://github.com/OpenZWave/open-zwave/archive/master.zip 
+        unzip master.zip 
+        cd open-zwave-master 
+        sudo make install 
+        sudo ldconfig /usr/local/lib /usr/local/lib64 
+        cd ..
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
