--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -5,12 +5,19 @@ on: [push, pull_request]
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ${{matrix.os}}
 
     strategy:
       matrix:
-        node-version: [12.x]
-
+        os: [windows-2016, windows-latest]
+        node-version: [10.x, 11.x, 12.x]
+        exclude:
+            - os: windows-2016
+              node-version: 12.x
+            - os: windows-latest
+              node-version: 10.x
+            - os: windows-latest
+              node-version: 11.x
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
