--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,10 +10,12 @@ jobs:
     strategy:
       matrix:
         os: [windows-2016, windows-latest]
-        node-version: [10.x, 11.x, 12.x]
+        node-version: [8.x, 10.x, 11.x, 12.x]
         exclude:
             - os: windows-2016
               node-version: 12.x
+            - os: windows-latest
+              node-version: 8.x
             - os: windows-latest
               node-version: 10.x
             - os: windows-latest
